--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+ "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "dev": "concurrently --kill-others-on-fail \"npx tsc --watch\" \"nodemon -q --exec node dist/index.js\"",
