--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
- "main": "dist/index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "dev": "concurrently --kill-others-on-fail \"npx tsc --watch\" \"nodemon -q --exec node dist/index.js\"",
@@ -30,12 +30,13 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^20.4.8",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-validator": "^3.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^20.17.30",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
