--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,7 +21,7 @@
     "resolveJsonModule": true,
     "outDir": "dist",
     "baseUrl": "./",
-    "types": ["node"]
+    // "types": ["node"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
