--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,6 +12,21 @@
 // }
 
 
+// {
+//   "compilerOptions": {
+//     "module": "ESNext",
+//     "target": "ES2020",
+//     "moduleResolution": "node",
+//     "esModuleInterop": true,
+//     "resolveJsonModule": true,
+//     "outDir": "dist",
+//     "baseUrl": "./",
+//     // "types": ["node"]
+//   },
+//   "include": ["src"],
+//   "exclude": ["node_modules"]
+// }
+
 {
   "compilerOptions": {
     "module": "ESNext",
@@ -21,9 +36,9 @@
     "resolveJsonModule": true,
     "outDir": "dist",
     "baseUrl": "./",
-    // "types": ["node"]
+    "skipLibCheck": true,
+    "typeRoots": ["node_modules/@types"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
 }
-
